--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -48,7 +48,7 @@ body {
     background-color: transparent;
     font-family: Montserrat, sans-serif;
     min-height: 100vh;
-    font-size: 80%;
+    font-size: 75%;
 }
 
 /**************************************************************************************************
@@ -95,6 +95,8 @@ main > .row {
     border-color: #f0f0f0;
     border-style: solid;
     border-width: 0 1px 4px 1px;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
 }
 
 /* Header */
